Crash on linking external OSL material #44989

Closed
opened 2015-06-07 13:16:12 +02:00 by Anna Celarek · 4 comments

System Information
Windows 7 64bit
GTX 550Ti

Blender Version
Broken: 2.74 official and svn hash 5aade17 (2015-06-06)

Short description of error
Materials with script nodes with external OSL can't be linked -> Crash when attempting to assign the material to an object.

Exact steps for others to {F186775}reproduce the error
Open Link_in_here.blend
File > Link > Materials.blend (same folder) > Materials > Material_External > Link from Library
now select the torus and try assigning Material_External => Crash
(Material_External includes a script node with an OSL shader, externally located in Toon_03.osl in the same folder as the two .blend files)

It doesn't crash when you link Material_Internal, which includes the same OSL shader but internally within the Material.blend.
Both are exactly the same OSL shaders, and both work without crash in the Materials.blend file, so I think it's not a problem with the OSL itself.

**System Information** Windows 7 64bit GTX 550Ti **Blender Version** Broken: 2.74 official and svn hash 5aade17 (2015-06-06) **Short description of error** Materials with script nodes with external OSL can't be linked -> Crash when attempting to assign the material to an object. **Exact steps for others to {[F186775](https://archive.blender.org/developer/F186775/OSL_Crash.zip)}reproduce the error** Open Link_in_here.blend File > Link > Materials.blend (same folder) > Materials > Material_External > Link from Library now select the torus and try assigning Material_External => Crash (Material_External includes a script node with an OSL shader, externally located in Toon_03.osl in the same folder as the two .blend files) It doesn't crash when you link Material_Internal, which includes the same OSL shader but internally within the Material.blend. Both are exactly the same OSL shaders, and both work without crash in the Materials.blend file, so I think it's not a problem with the OSL itself.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AnnaCelarek

Added subscriber: @AnnaCelarek
Sergey Sharybin self-assigned this 2015-06-07 19:08:57 +02:00

This issue was referenced by 546a0e2d96

This issue was referenced by 546a0e2d967ffa1a4cdf60c29fa57b2b5d4c9bbc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44989
No description provided.